syntax = "proto3";

package pb;



//The User service definition.
service User {
 rpc AddGender           (AddGenderRequest          ) returns (AddGenderReply          );
 rpc GetGender           (GetGenderRequest          ) returns (GetGenderReply          );
 rpc ListGenders         (ListGendersRequest        ) returns (ListGendersReply        );
 rpc RemoveGender        (RemoveGenderRequest       ) returns (RemoveGenderReply       );
 rpc CreateUser          (CreateUserRequest         ) returns (CreateUserReply         );
 rpc GetUserByID         (GetUserByIDRequest        ) returns (GetUserByIDReply        );
 rpc GetUserByEmail      (GetUserByEmailRequest     ) returns (GetUserByEmailReply     );
 rpc UpdateUserEmail     (UpdateUserEmailRequest    ) returns (UpdateUserEmailReply    );
 rpc UpdateUserPassword  (UpdateUserPasswordRequest ) returns (UpdateUserPasswordReply );
 rpc UpdateUserInfo      (UpdateUserInfoRequest     ) returns (UpdateUserInfoReply     );
 rpc DeleteUserSoft      (DeleteUserSoftRequest     ) returns (DeleteUserSoftReply     );
 rpc RecoverUser         (RecoverUserRequest        ) returns (RecoverUserReply        );
 rpc DeleteUserPermanent (DeleteUserPermanentRequest) returns (DeleteUserPermanentReply);
 rpc VerifyPassword      (VerifyPasswordRequest     ) returns (VerifyPasswordReply     );
}

message AddGenderRequest {}

message AddGenderReply {}

message GetGenderRequest {}

message GetGenderReply {}

message ListGendersRequest {}

message ListGendersReply {}

message RemoveGenderRequest {}

message RemoveGenderReply {}

message CreateUserRequest {}

message CreateUserReply {}

message GetUserByIDRequest {}

message GetUserByIDReply {}

message GetUserByEmailRequest {}

message GetUserByEmailReply {}

message UpdateUserEmailRequest {}

message UpdateUserEmailReply {}

message UpdateUserPasswordRequest {}

message UpdateUserPasswordReply {}

message UpdateUserInfoRequest {}

message UpdateUserInfoReply {}

message DeleteUserSoftRequest {}

message DeleteUserSoftReply {}

message RecoverUserRequest {}

message RecoverUserReply {}

message DeleteUserPermanentRequest {}

message DeleteUserPermanentReply {}

message VerifyPasswordRequest {}

message VerifyPasswordReply {}

