syntax = "proto3";

option go_package = "github.com/chutified/booking-terminal/user/pkg/grpc/userpb;userpb";

package user;

// User represents a basic user object.
message User {
  // Gender of the user.
  enum Gender {
    UNKNOWN = 0;
    MALE = 1;
    FEMALE = 2;
    OTHER = 3;
  }

  // Date represents a whole calendar date.
  // Representation can be following:
  //
  // * A full date (birthday)
  // * A zero-year, month-day value (anniversary)
  // * A zero-day, year-month value (expiration)
  // * A year only, zero month and day (birth year)
  message Date {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
  }

  // User's unique ID of type UUID.
  string id = 1;

  // User's unique email address.
  string email = 2;

  // User's unique phone number.
  string phone = 3;

  // Raw user's password. It is used only in the registration
  // process or if it needs to be updated. Otherwise, this field
  // is always empty.
  string password = 4;

  // User's basic information.
  string first_name = 5;
  string last_name = 6;
  Gender gender = 7;
  Date birthday = 8;
}
