syntax = "proto3";

option go_package = "github.com/chutified/booking-terminal/user/pkg/grpc/userpb;userpb";

package user;

import "user_message.proto";

service UserService {
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse) {};
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {};
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {};
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {};
}

message RegisterUserRequest {
  User user = 1;
}

message RegisterUserResponse {
  string id = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string id = 1;
  User user = 2;
}

message UpdateUserResponse {
  string id = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  string id = 1;
}
